--- a/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
+++ b/browser/js/common/directives/level-editor-stuff/new-sprite-form.html
@@ -36,12 +36,12 @@
 	<div class='col-xs-12 col-md-6'>
 		<!--select name (from existing vars)-->
 		<md-select class="col-xs-12" placeholder="Select name" ng-model="newSprite.varName">
-	 		<md-option ng-repeat='name in spellVars' value='{{name.name}}'>{{name.name}}</md-option>
+	 		<md-option ng-repeat='name in spellVars track by $index' value='{{name.name}}'>{{name.name}}</md-option>
 		</md-select>
 
 		<!--select match-->
 		<md-select class="col-xs-12" placeholder="Select condition" ng-model="newSprite.match">
-	 		<md-option ng-repeat='variable in spellVars' value='{{variable.name}}'>{{variable.name}}</md-option>
+	 		<md-option ng-repeat='variable in spellVars track by $index' value='{{variable.name}}'>{{variable.name}}</md-option>
 		</md-select>
 
 	</div>
