--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -2,7 +2,19 @@
 	<div class="col-md-6 col-sm-12">
 		<h2>SpellBook</h2>
 	    <p>
-	        SpellBook is an interactive story book that teaches children basic programmatic logic, using fun story-lines and a unique drag-and-drop interface.
+	    	SpellBook is an interactive story book that teaches children basic programmatic logic, using fun story-lines and a unique drag-and-drop interface.
+	    </p>
+
+	    <p>
+	   	 	We aim to address the gender gap in Computer Science by engaging girls in programming at a young age. Studies show that girls are more engaged in stories and characters, and so we built our app to reach the many children who are more literary-minded.  
+	    </p>
+
+	    <p>
+	    	Each page in the book will further the storyline and present the child with a fun challenge that uses a basic piece of logic (such as if-statements, loops, etc).  
+	    </p>
+
+	    <p>	   
+	    	Teachers, parents, and children can also track how they are doing on their user pages, as well as the teacher data page. 
 	    </p>
 
 	    <p>
