more about edits and navbar

--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -20,6 +20,9 @@
 	    <p>
 	    	This project was created by the Enigmasters of Fullstack Academy: Austin Shoecraft, Beckylee Dell, Chandra Galbiati, and Emily Sanford. We'd like to give special credit to Griffin and Ben for all their support, assistance, and puns.
 	    </p>
+	    </p>
+	    	We always welcome feedback to improve our app.  If you would like ask a question, or tell us what you think, email us at spellbookcode@gmail.com
+	    <p>
 
 	</div>
     <div class="col-md-6 col-sm-12">
