able to play without logging in

--- a/browser/js/common/directives/not-loggedin/not-loggedin.html
+++ b/browser/js/common/directives/not-loggedin/not-loggedin.html
@@ -1,8 +1,8 @@
 	<div class="text-center" id="levelwin">
 		<h3>Please Log In!</h3>
-		<h4>You must be logged in to view stories</h4>
+		<h4>You are not logged in.  SpellBook cannot save your progress unless you log in.</h4>
 		<div class="text-center center-block">
 			<button class="btn btn-default" ui-sref="loginSignup" ng-click="closemodal()">Login</button>
-			<button class="btn btn-default" ng-click="closemodal()">Close</button>
+			<button class="btn btn-default" ng-click="closemodal()">Continue without logging in</button>
 		</div>
 	</div>
