working on responsive front page

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,6 +1,8 @@
 <section id="home">
 	<div id="book" class="center-block text-center" ng-click="goBooks()">
-	    <fullstack-logo class="center-block text-center"></fullstack-logo>
-	    <h1 class="center-block text-center">SpellBook</h1>
+		<div id='logo'>
+			<fullstack-logo class="center-block text-center"></fullstack-logo>
+	    	<h1 class="center-block text-center">SpellBook</h1>
+		</div>
 	</div>
 </section>
